fix: when login, modal visibility fix

--- a/css/global.css
+++ b/css/global.css
@@ -19,6 +19,7 @@ body {
 
 #content {
   opacity: 0;
+  transition: all 0.5s;
 }
 
 #loader {
